<resources>
    <string name="app_name">Pocket Channel</string>
    <string name="start">ON</string>
    <string name="stop">OFF</string>
    <string name="timerZero">00:00:00</string>
    <string name="plus">+</string>
    <string name="close">x</string>
    <string name="hour">hour</string>
    <string name="minute">min</string>
    <string name="second">sec</string>
    <string name="set_timer">Set Timer</string>
    <string name="colon">:</string>
    <string name="timer_label">Timer</string>
</resources>