<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.main.MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CLDefault"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/screen_background"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/CLControl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/LLTimer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="5"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <NumberPicker
                android:id="@+id/NPHour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/numberPicker" />

            <TextView
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:text="@string/colon"
                android:textColor="?android:textColorPrimary"
                android:textSize="48sp" />

            <NumberPicker
                android:id="@+id/NPMinute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/numberPicker"/>

            <TextView
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:text="@string/colon"
                android:textColor="?android:textColorPrimary"
                android:textSize="48sp" />

            <NumberPicker
                android:id="@+id/NPSecond"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/numberPicker"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVTask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/task_item" />

        <TextView
            android:id="@+id/TVTimer"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:fontFamily="serif-monospace"
            android:text="@string/timerZero"
            android:textSize="24sp"
            android:textColor="?android:textColorPrimary"
            android:gravity="center_vertical"
            android:clickable="true"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextClock
            android:id="@+id/TCTimer"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:fontFamily="serif-monospace"
            android:format24Hour="HH:mm:ss"
            android:format12Hour="hh:mm:ss a"
            android:textSize="24sp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1.5dp"
            android:layout_margin="6dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@id/TVTimer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/TVAdd"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/plus"
            android:textColor="?android:textColorPrimary"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/TVTimer" />

        <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CLControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/IBtoggler"
        app:layout_constraintStart_toStartOf="@+id/IBtoggler"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/IBRain"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:src="@drawable/selector_button"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:scaleType="fitCenter"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/IBForest"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:src="@drawable/selector_button"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:scaleType="fitCenter"
            android:background="@null"
            app:layout_constraintStart_toStartOf="@id/IBRain"
            app:layout_constraintTop_toBottomOf="@id/IBRain"/>

        <ImageButton
            android:id="@+id/IBCamp"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:src="@drawable/selector_button"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:scaleType="fitCenter"
            android:background="@null"
            app:layout_constraintStart_toStartOf="@id/IBForest"
            app:layout_constraintTop_toBottomOf="@id/IBForest"/>


        <ImageView
            android:id="@+id/IVRain"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:src="@drawable/transition_rain"
            app:layout_constraintBottom_toBottomOf="@+id/IBRain"
            app:layout_constraintStart_toEndOf="@id/IBRain"
            app:layout_constraintTop_toTopOf="@id/IBRain" />

        <ImageView
            android:id="@+id/IVForest"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:src="@drawable/transition_forest"
            app:layout_constraintBottom_toBottomOf="@+id/IBForest"
            app:layout_constraintStart_toEndOf="@id/IBForest"
            app:layout_constraintTop_toTopOf="@id/IBForest" />

        <ImageView
            android:id="@+id/IVCamp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:src="@drawable/transition_camp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/IBCamp"
            app:layout_constraintTop_toTopOf="@id/IBCamp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/IBtoggler"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@null"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="centerInside"
        android:padding="0dp"
        android:src="@drawable/selector_toggler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/TVStart" />

    <TextView
        android:id="@+id/TVStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/start"
        android:textColor="@drawable/selector_activated_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/IBtoggler" />

    <TextView
        android:id="@+id/TVEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/stop"
        android:textColor="@drawable/selector_activated_text"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/IBtoggler"
        app:layout_constraintStart_toStartOf="@id/TVStart" />


</androidx.constraintlayout.widget.ConstraintLayout>